주문상태 antd 필터 제거 및 filteringModal 주문현황에 노출

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -1863,8 +1863,8 @@
   }
 
   .timeDelay-sub-title {
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 15px;
+    /* font-weight: bold; */
     line-height: 30px;
     display: inline-block;
   }
@@ -2069,7 +2069,8 @@
 
   .filtering-box {
     display: inline-block;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
+    margin-top: 10px;
   }
 
   .filtering-box-wrapper > div:last-child {
@@ -2117,7 +2118,7 @@
   }
 
   .filtering-box .ant-checkbox + span {
-    font-size: 18px;
+    font-size: 15px;
     vertical-align: top;
     line-height: 25px;
   }
