--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -2070,9 +2070,11 @@
   .filtering-box {
     display: inline-block;
     /* margin-bottom: 10px; */
-    margin-top: 10px;
   }
-
+  .filtering-box-wrapper {
+    float: right;
+    display: block;
+  }
   .filtering-box-wrapper > div:last-child {
     margin-bottom: 0;
     display: block;
