접수현황 완료취소 건수 추가(API 부재로 현재 주석처리 중)

--- a/src/css/order.css
+++ b/src/css/order.css
@@ -197,7 +197,22 @@
     height: 35px;
     line-height: 35px;
   }
-  .delivery-status-box > div:last-child {
+  .delivery-status-box > div:nth-child(3) {
     border: 1px solid #d1d1d1;
+  }
+  .delivery-status-box-sub {
+    display: inline-block;
+    float: right;
+  }
+  .delivery-status-box-sub > div {
+    display: inline-block;
+    width: 125px;
+    font-size: 15px;
+    text-align: center;
+    margin-right: 15px;
+    margin-top: -2.5px;
+    border-radius: 5px;
+    height: 35px;
+    line-height: 35px;
   }
 }
