주문현황 테이블 스크롤 적용

--- a/src/css/order.css
+++ b/src/css/order.css
@@ -171,9 +171,13 @@
     color: white;
   }
 
-  #reception-table .ant-table .ant-table-tbody > tr {
-    width: "100vw";
+  #reception-table .ant-table-body .ant-table-measure-row {
+    display: none;
   }
+
+  /* #reception-table .ant-table .ant-table-tbody > tr {
+    width: "100vw";
+  } */
 
   .ant-table .ant-table-thead > tr > th.ant-table-cell-scrollbar {
     display: none;
