접수현황 메뉴 탭 폰트 컬러 수정

--- a/src/css/order.css
+++ b/src/css/order.css
@@ -124,6 +124,10 @@
     background-color: #ff0000;
     color: white;
   }
+  .table-redalert:hover {
+    background-color: #fff;
+    color: #000;
+  }
 
   .table-gray {
     background-color: gray;
