--- a/src/css/order_m.css
+++ b/src/css/order_m.css
@@ -16,11 +16,11 @@
 
   .mapTab {
     margin-left: 0px !important;
-    width:149px;
+    width: 149px;
   }
 
   .registTab {
-    width:149px;
+    width: 149px;
   }
 
   .filterTab {
@@ -100,6 +100,11 @@
     background-color: #ff0000;
     color: white;
   }
+  .table-redalert:hover {
+    background-color: #fff;
+    border: 1px solid #ff0000;
+    color: #000;
+  }
   .table-gray {
     background-color: gray;
   }
@@ -177,13 +182,13 @@
     width: 308px;
   }
   .delivery-status-mobile {
-    display:inline-block;
-    border:1px solid; 
+    display: inline-block;
+    border: 1px solid;
     text-align: center;
     margin-right: 6px;
     margin-bottom: 10px;
     border-radius: 5px;
-    padding:5px 10px;
-    font-size:16px;
+    padding: 5px 10px;
+    font-size: 16px;
   }
 }
