가맹점 컬럼 일부 삭제 및 출금계좌 이름변경

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -4410,7 +4410,7 @@
     font-size: 18px;
   }
 
-  /* 출금계정등록 dialog */
+  /* 출금계좌등록 dialog */
   .registAccount-Dialog-overlay {
     position: fixed;
     top: 0;
