--- a/src/css/franchise_m.css
+++ b/src/css/franchise_m.css
@@ -7,8 +7,9 @@
     }
   
     .franchiseContainer .selectLayout {
-        /* margin-top: 20px; */
+        margin-top: 20px;
         vertical-align: middle;
+        margin-right: 10px!important;
       }
       
       .franchiseContainer .dataTableLayout {
@@ -17,7 +18,7 @@
       
       .franchiseContainer .override-select.fran {
         width: 220px;
-        margin-left: 10px;
+        /* margin-left: 20px; */
       }
       
       .searchTab {
@@ -25,14 +26,23 @@
       }
       
       .searchFranchiseInput {
-        width: 200px !important;
+        width: 205px !important;
         margin-left: 15px;
+        margin-bottom:10px;
       }
       
       .exel img {
         width: 20px;
         margin-right: 5px;
         margin-bottom: 3px;
+      }
+      .addFranTab{
+        margin-left:0px!important;
+        width:140px;
+      }
+
+      .sectionTab{
+        width:140px;
       }
 
       
