--- a/src/css/order.css
+++ b/src/css/order.css
@@ -70,6 +70,10 @@
     /* margin-right: 5px; */
   }
 
+  .dataTableLayout2 .ant-table-thead{
+    z-index:0;
+  }
+
   .riderTableLayout {
     min-height: 200px;
     position: absolute;
