--- a/src/css/rider.css
+++ b/src/css/rider.css
@@ -9,9 +9,15 @@
 
 .searchRiderInput {
   width: 200px !important;
-  margin-left: 15px;
+  margin-left: 10px;
 }
 @media screen and (min-width: 1200px) {
+  .rider-filtering-box {
+    border: 1px solid #d1d1d1;
+    display: flex;
+    width: 567px;
+    margin-top: 10px;
+  }
   .rider-status {
     float: right;
     display: inline-block;
@@ -19,10 +25,16 @@
     font-size: 15px;
     border: 1px solid #d1d1d1;
     text-align: center;
-    margin-right: 15px;
-    margin-top: -29px;
+    margin-left: 15px;
+    /* margin-top: -29px; */
     border-radius: 5px;
     height: 35px;
     line-height: 35px;
+  }
+  .select-rider-status{
+    float: right;
+    display: inline-block;
+    margin-top: -29px;
+    margin-right: 15px;
   }
 }
