--- a/src/css/order.css
+++ b/src/css/order.css
@@ -23,7 +23,7 @@
   }
 
   .selectLayout {
-    margin-top: 20px !important;
+    /* margin-top: 20px !important; */
     display: inline-block;
   }
 
@@ -31,33 +31,14 @@
     margin-left: 20px !important;
   }
 
-  .riderMain-container .selectLayout {
-    margin-top: 10px !important;
-    margin-bottom: 10px !important;
-    display: inline-block;
-    position: fixed;
-  }
-
-  .franchiseContainer .selectLayout {
-    margin-top: 10px !important;
-    margin-bottom: 10px !important;
-    display: inline-block;
-  }
-
+  /* 라이더 */
   .dataTableLayout {
     margin-top: 10px;
   }
 
+  /* 가맹점 */
   .dataTableLayout2 {
-    margin-top: 10px;
-    /* -webkit-overflow-scrolling: initial; */
-    /* vertical-align: top; */
-    /* white-space: nowrap; */
-    /* float: left; */
-    /* display: table; */
-    /* max-width: 100px; */
-    /* display: table; */
-    /* table-layout: fixed; */
+    /* margin-top: 10px; */
     white-space: nowrap;
   }
 
