--- a/src/css/modal_m.css
+++ b/src/css/modal_m.css
@@ -1176,7 +1176,7 @@
     vertical-align: middle;
   }
   .contentBlock .override-input {
-    margin-left: 20px;
+    margin-left: 5px;
     width: 150px;
   }
   .callTab {
@@ -2232,7 +2232,7 @@
     /* font-size: 20px; */
     vertical-align: middle;
     font-weight: bold;
-    /* width: 75px; */
+    /* width: 45px; */
   }
 
   .taskScheduler-btn {
@@ -3154,14 +3154,14 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 800px;
+    width: 320px;
     border-radius: 30px;
     z-index: 2;
   }
 
   .searchAddress-content {
     background-color: white;
-    padding: 30px;
+    padding: 10px;
     text-align: left;
     color: #777;
   }
@@ -3177,6 +3177,7 @@
   }
   .searchAddressWrapper {
     margin-bottom: 20px;
+    width:310px;
   }
 
   .searchAddress-close {
@@ -3192,7 +3193,7 @@
     width: 100%;
     /* overflow-y: scroll; */
     border: 1px solid #ccc;
-    padding: 20px 20px;
+    padding: 5px;
     text-align: left;
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
@@ -3215,8 +3216,8 @@
 
   .searchAddress-btn {
     display: inline-block;
-    margin-top: 113px;
-    margin-right: 20px;
+    margin-top: 10px;
+    margin-right: 25px;
     float: right;
   }
 
@@ -3231,6 +3232,10 @@
 
   .searchAddress-Dialog .layout .dataTableLayout-01 {
     margin-top: 30px;
+    height:300px;
+    overflow-y: scroll;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
   }
 
   .searchAddress-Dialog .ant-table-content thead th {
@@ -3248,20 +3253,21 @@
     font-size: 20px;
     font-weight: bold;
     color: #1890ff;
+    margin-top:10px;
   }
 
   .contentbox {
     display: inline-block;
-    width: 450px;
+    width: 300px;
     vertical-align: top;
-    margin-left: 30px;
+    margin-left: 10px;
   }
 
   .second {
     display: inline-block;
-    width: 570px;
+    width: 300px;
     vertical-align: top;
-    margin-left: 30px;
+    margin-left: 10px;
   }
 
   .searchAddress-Dialog .searchRequirement {
@@ -3269,12 +3275,12 @@
     margin-left: 20px;
   }
   .searchAddress-Dialog .contentBlock .override-input {
-    width: 350px;
+    width: 230px;
     vertical-align: middle;
   }
   .searchAddress-Dialog .contentBlock .addrBtn {
-    width: 120px;
-    margin-left: 20px;
+    width: 50px;
+    margin-left: 5px;
   }
 
   .searchAddress-Dialog .contentBlock .addrBtn span {
@@ -3284,10 +3290,10 @@
   .searchAddress-Dialog .contentBlock .mainTitle {
     font-size: 16px;
     color: #222;
-    width: 80px;
+    width: 40px;
   }
   .searchAddress-Dialog .contentBlock .short {
-    width: 210px;
+    width: 175px;
   }
 
   .map-address-Dialog {
