주소검색관리 ui

--- a/src/css/common_m.css
+++ b/src/css/common_m.css
@@ -43,6 +43,7 @@
   .ant-table-container table > thead > tr:first-child th:first-child {
     /* width:5%!important; */
     /* border:1px solid #fff; */
+    width:20%;
   }
 
   .ant-table-expanded-row .ant-table-thead > tr > th {
