기사관리 근무 건수 UI수정

--- a/src/css/rider.css
+++ b/src/css/rider.css
@@ -19,15 +19,17 @@
 }
 
 @media screen and (min-width: 1200px) {
-  .rider-status {
+  .riderStatus{
     float: right;
+    margin-top: -45px;
+  }
+  .rider-status {
     display: inline-block;
     width: 120px;
     font-size: 15px;
     border: 1px solid #d1d1d1;
     text-align: center;
     margin-right: 15px;
-    margin-top: -29px;
     border-radius: 5px;
     height: 35px;
     line-height: 35px;
