--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -593,7 +593,7 @@
     width: 1000px;
     border-radius: 30px;
     padding: 20px;
-    z-index: 99;
+    z-index: 2;
   }
 
   .noticeLayout {
@@ -831,7 +831,7 @@
     transform: translate(-50%, -60%);
     width: 1000px;
     border-radius: 30px;
-    z-index: 99;
+    z-index: 2;
   }
   .surcharge-Dialog .mainTitle {
     display: inline-block;
@@ -1035,7 +1035,7 @@
     transform: translate(-50%, -50%);
     width: 1300px;
     border-radius: 30px;
-    z-index: 99;
+    z-index: 3;
   }
   .registCall-container {
     background-color: white;
@@ -1195,7 +1195,7 @@
     transform: translate(-50%, -50%);
     width: 1000px;
     border-radius: 30px;
-    z-index: 999;
+    z-index: 2;
   }
   .registFran-container {
     background-color: white;
@@ -1312,9 +1312,6 @@
   .registFranWrapper .override-input.addrBtn {
     width: 120px;
   }
-  .registFranWrapper .override-input.serchRiderBtn {
-    width: 90px;
-  }
 
   /* 오른쪽 wrappper */
   .registFranWrapper.sub {
@@ -1335,13 +1332,10 @@
     /* margin-left: -30px; */
     width: 300px;
   }
-  .registFranWrapper.sub .override-input.orderman {
+  .registFranWrapper.sub .override-input.price {
     /* margin-left: -30px; */
-    width: 190px;
-  }
-  .registFranWrapper.sub .ant-picker.datepicker {
-    margin-left: 20px;
-    width: 300px;
+    width: 200px;
+    margin-right: 10px;
   }
   /* .registFranWrapper.sub .callTab {
   width: 400px;
@@ -1394,10 +1388,6 @@
   .registFran-btn {
     float: right;
     margin-top: 15px;
-    width: 180px;
-    height: 40px;
-    font-size: 18px;
-    margin-top: -5px;
   }
   /* 코인이체 dialog */
   .coinTran-Dialog {
@@ -1855,7 +1845,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 690px;
-    z-index: 99;
+    z-index: 2;
   }
 
   .timeDelay-content {
@@ -3249,9 +3239,9 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 900px;
+    width: 800px;
     border-radius: 30px;
-    z-index:99;
+    z-index: 2;
   }
 
   .searchAddress-content {
@@ -3549,6 +3539,11 @@
     display: none; /* Chrome, Safari, Opera*/
   }
 
+  .selectLayout {
+    margin-left: 0;
+    margin-right: 1rem;
+  }
+
   /* ModifyOrdeDialog */
 
   .modifyOrderLayout {
@@ -3733,7 +3728,7 @@
     transform: translate(-50%, -50%);
     width: 1000px;
     border-radius: 30px;
-    z-index: 99;
+    z-index: 2;
   }
   .blind-container {
     background-color: white;
@@ -4636,7 +4631,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 99;
+    z-index: 2;
   }
 
   .zone-content {
