--- a/src/css/index.css
+++ b/src/css/index.css
@@ -118,18 +118,27 @@
 
   .c-p-10 {
     padding: 0px 10px;
+    text-align: center;
   }
 
   .c-p-15 {
     padding: 0px 10px;
+    text-align: center;
   }
 
   .c-p-20 {
     padding: 0px 20px;
+    text-align: center;
   }
 
   .c-p-25 {
     padding: 0px 25px;
+    text-align: center;
+  }
+
+  .c-p-30 {
+    padding: 0px 30px;
+    text-align: center;
   }
 
   /* .table-column-surGroup{
