--- a/src/css/modal_m.css
+++ b/src/css/modal_m.css
@@ -321,17 +321,17 @@
   /* 지도 관제 dialog */
   .map-Dialog {
     position: fixed;
-    top: 0;
-    left: 0;
-    /* transform: translate(-50%, -50%); */
-    /* width: 100%;
-    height: 100%; */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 85vw;
+    height: 85vh;
     z-index: 2;
   }
 
   .map-Dialog .mapLayout {
-    width: 100vw;
-    height: 100vh;
+    width: 85vw;
+    height: 80vh;
   }
 
   .map-Dialog .mapLayout .map-navermap {
@@ -348,11 +348,14 @@
     top: 10%;
     left: 24.95%;
   }
-
-  .map-content {
-    background-color: white;
-    /* height: 100vh;
-    width: 100vw; */
+  .map-menu-bar {
+    width: 100%;
+    background-color: #fff;
+    height: 56px;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
   .map-title {
@@ -365,25 +368,17 @@
   }
 
   .map-close {
-    position: absolute;
-    top: 30px;
-    right: 50px;
     z-index: 90;
     width: 30px;
     cursor: pointer;
     background-color: #fddc00;
     /* display: inline-block; */
-    padding: 8px;
   }
 
   .select-rider-orderCnt {
-    position: absolute;
-    top: 10px;
-    left: 10px;
     z-index: 90;
     width: 30px;
     cursor: pointer;
-    padding: 8px;
   }
 
   .map-inner {
@@ -393,20 +388,42 @@
     /* border: 1px solid #ccc;  */
     text-align: left;
   }
-
-  .select-rider-orderCnt {
-    position: absolute;
-    /* right: 10px; */
-    /* left: 1793px; */
-    /* top: 110px; */
+  .map-inner .textLayout {
+    height: 56px;
+    line-height: 56px;
   }
-
+  .map-inner .riderText {
+    margin-left: 100px;
+  }
+  .riderOderTable {
+    width: 100%;
+    height: 45vh;
+    position: absolute;
+    top: 40%;
+    left: 0px;
+    overflow-x: scroll;
+    -ms-overflow-style: none;
+  }
   .callDataTable {
     width: 45%;
+    height: 45vh;
     position: absolute;
-    top: 35%;
+    top: 40%;
+    left: 10px;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
   }
-
+  .callDataTable::-webkit-scrollbar {
+    display: none;
+  }
+  .riderListTable {
+    height: 45vh;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+  }
+  .riderListTable::-webkit-scrollbar {
+    display: none;
+  }
   .table-column-center.arrive {
     overflow: hidden;
     text-overflow: ellipsis;
@@ -416,7 +433,7 @@
     width: 42%;
     position: absolute;
     right: 10px;
-    top: 300px;
+    top: 35%;
     z-index: 50;
   }
   .rider-list-show-btn {
@@ -1245,7 +1262,7 @@
   }
   .registFran-title {
     /* font-size: 28px; */
-    letter-spacing: -1px; 
+    letter-spacing: -1px;
     font-weight: bold;
     color: #333;
     text-align: right;
@@ -3199,7 +3216,7 @@
   }
   .searchAddressWrapper {
     margin-bottom: 20px;
-    width:310px;
+    width: 310px;
   }
 
   .searchAddress-close {
@@ -3253,7 +3270,7 @@
   }
 
   .searchAddress-Dialog .layout .dataTableLayout-01 {
-    height:300px;
+    height: 300px;
     overflow-y: scroll;
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
@@ -3274,7 +3291,7 @@
     font-size: 16px;
     font-weight: bold;
     color: #1890ff;
-    margin-top:10px;
+    margin-top: 10px;
   }
 
   .contentbox {
@@ -3289,7 +3306,7 @@
     width: 300px;
     vertical-align: top;
     margin-left: 10px;
-    margin-bottom:0px!important;
+    margin-bottom: 0px !important;
   }
 
   .searchAddress-Dialog .searchRequirement {
