--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -3276,7 +3276,7 @@
     transform: translate(-50%, -50%);
     width: 900px;
     border-radius: 30px;
-    z-index:999;
+    z-index: 999;
   }
 
   .searchAddress-content {
@@ -3379,9 +3379,17 @@
 
   .second {
     display: inline-block;
+    width: 550px;
+    vertical-align: top;
+    margin-left: 30px;
+  }
+
+  .third {
+    display: inline-block;
     width: 570px;
     vertical-align: top;
     margin-left: 30px;
+    margin-top: 30px;
   }
 
   .searchAddress-Dialog .searchRequirement {
