--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -841,12 +841,14 @@
 .riderBank-inner::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera*/
 }
-
+.riderBank-list{
+  height: 500px;
+}
 .riderBank-list-01{
   display:inline-block;
   width:950px;
   text-align: left;
-  margin-top:20px;
+  margin-top:30px;
 }
 
 .riderBank-list-01 .riderBank-datepicker{
@@ -1530,8 +1532,8 @@
   /* margin: 0px 30px; */
 }
 
-.riderGroup-inner .selectBlock{
-  margin:20px;
+.riderGroup-content .selectBlock{
+  margin-top:20px; 
 }
 .riderGroup-inner .selectBlock .ant-form-item{
   margin-bottom: 0px;
